--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,21 @@ body {
     font-family: Hack, monospace;
 }
 
+footer {
+    line-height: 1.5;
+    font-family: Hack, monospace;
+}
+
 code {
     font-family: Hack, monospace;
 }
 
 h1 {
+    text-align: center;
+    font-family: Hack, monospace;
+}
+
+h2 {
     text-align: center;
     font-family: Hack, monospace;
 }
