--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,8 @@ footer {
 
 nav {
     font-family: Hack, monospace;
-    font-size: 8px;
+    text-align: right;
+    font-size: 10px;
 }
 
 code {
@@ -20,11 +21,12 @@ code {
 }
 
 h1 {
-    text-align: center;
+    text-align: left;
     font-family: Hack, monospace;
+    font-size: 16px;
 }
 
 h2 {
-    text-align: center;
+    text-align: left;
     font-family: Hack, monospace;
 }
