test: 'max-width' in 'ch' units in css 2

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ footer {
 
 p {
   max-width: 80ch;
-  overflow: hidden;
+  /* overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  white-space: nowrap; */
 }
