--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,108 @@
 }
 
 #content-wrap {
-  padding-bottom: 2.5rem; /* Footer height */
+  padding-bottom: 2.5rem;
 }
 
 #footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 2.5rem;         /* Footer height */
+  height: 2.5rem;
+}
+
+code {
+    font-family: Hack, monospace;
+}
+
+h1 {
+    text-align: left;
+    font-family: Hack, monospace;
+    font-size: 18px;
+}
+
+h2 {
+    text-align: left;
+    font-family: Hack, monospace;
+    font-size: 16px;
+}
+
+h3 {
+    text-align: left;
+    font-family: Hack, monospace;
+    font-size: 14px;
+}
+
+body {
+    margin: 0;
+    line-height: 1.5;
+    font-family: Hack, monospace;
+    font-size: 12px;
+}
+
+footer {
+    line-height: 1.5;
+    font-family: Hack, monospace;
+    font-size: 10px;
+}
+
+p {
+    max-width: 80ch;
+}
+
+a {
+    text-decoration: none;
+}
+
+.navigation {
+    background: #4682b4;
+}
+
+.navigation ul {
+    display: inline-block;
+}
+
+.logo {
+    float: left;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+nav {
+    font-family: Hack, monospace;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding-left: 0;
+}
+
+li {
+    color: #ffffff;
+    background: #4682b4;
+    display: block;
+    float: left;
+    padding: 1rem;
+    position: relative;
+    text-decoration: none;
+    transition-duration: 0.5s;
+}
+  
+li a {
+    color: #ffffff;
+    padding: 10px;
+}
+
+li:hover,
+li:focus-within {
+    background: #000000;
+    cursor: pointer;
+}
+
+li:focus-within a {
+    outline: none;
 }
