--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,23 @@
 #page-container {
-  position: relative;
-  min-height: 100vh;
+    position: relative;
+    min-height: 100vh;
 }
 
 #content-wrap {
-  padding-bottom: 2.5rem;
+    padding-bottom: 2.5rem;
 }
 
 #footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    font-family: Hack, monospace;
+    font-size: 12px;
+    font-weight: bold;
+    text-align: right;
+    background: #4682b4;
+    color: #ffffff;
 }
 
 code {
