--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 }
 
 #content-wrap {
-    padding-bottom: 2.5rem;
+    padding-bottom: 2.8rem;
 }
 
 code {
@@ -38,16 +38,20 @@ body {
 
 footer {
     line-height: 1.5;
-    font-size: 12px;
-    font-family: Hack, monospace;
-    font-weight: bold;
-    text-align: right;
     background: #4682b4;
     color: #ffffff;
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 2.5rem;
+}
+
+.footer p {
+    font-size: 10px;
+    font-family: Hack, monospace;
+    font-weight: bold;
+    text-align: right;
+    max-width: 100%;
+    padding-right: 25px;
 }
 
 p {
