--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,13 @@
 #page-container {
     position: relative;
     min-height: 100vh;
+    padding-bottom: 20px;
 }
 
 #content-wrap {
-    padding-bottom: 2.8rem;
     padding-left: 10px;
     padding-right: 10px;
+    padding-bottom: 10px;
 }
 
 code {
@@ -101,7 +102,7 @@ li {
     text-decoration: none;
     transition-duration: 0.5s;
 }
-  
+
 li a {
     color: #ffffff;
     padding: 10px;
