--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,11 @@ a {
 }
 
 .navigation ul {
-    display: inline-block;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: center;
 }
 
 .logo {
@@ -86,34 +90,70 @@ nav {
     font-weight: bold;
 }
 
-ul {
+.navigation li {
     list-style: none;
-    margin: 0;
-    padding-left: 0;
 }
 
-li {
+.navigation li a {
+    display: block;
+    padding: 1rem;
     color: #ffffff;
     background: #4682b4;
-    display: block;
-    float: left;
-    padding: 1rem;
-    position: relative;
     text-decoration: none;
-    transition-duration: 0.5s;
+    transition: background 0.3s ease-in-out;
 }
 
-li a {
-    color: #ffffff;
-    padding: 10px;
-}
-
-li:hover,
-li:focus-within {
+.navigation li a:hover,
+.navigation li a:focus {
     background: #000000;
-    cursor: pointer;
+    outline: none;
 }
 
-li:focus-within a {
-    outline: none;
+#content-wrap ul {
+    margin: 0 0 1rem 1.5rem;
+    padding: 0;
+}
+
+#content-wrap li {
+    margin-bottom: 0.5rem;
+}
+
+#content-wrap {
+    background: #ffffff;
+    color: #000000;
+}
+
+#content-wrap *,
+#content-wrap *::before,
+#content-wrap *::after {
+    background: none !important;
+    color: inherit !important;
+}
+
+#content-wrap a {
+    color: #004aad !important;
+}
+
+#content-wrap table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 10px 0;
+}
+
+#content-wrap table th,
+#content-wrap table td {
+    border: none;
+    padding: 0;
+    font-family: Hack, monospace;
+    font-size: 12px;
+    color: #000000;
+}
+
+#content-wrap table th {
+    font-size: 14px;
+}
+
+#content-wrap table th:last-child,
+#content-wrap table td:last-child {
+    text-align: right;
 }
