--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,8 @@
 }
 
 #content-wrap {
+    max-width: 80ch;
+    margin: 0 auto;
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 40px;
